tests/cases/attributes/ok/attribute-cfg-feature.ari
@cfg(feature("fast"))
fn value() -> i64 {
  return 13;
}

@cfg(not(feature("fast")))
fn value() -> i64 {
  return missing_feature_flag();
}

fn main() -> i64 {
  return value();
}
