tests/cases/attributes/errors/attribute-deprecated-argument.ari
@deprecated(123)
fn value() -> i64 {
  return 1;
}

fn main() -> i64 {
  return value();
}
